--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.0.1"
   },
   "dependencies": {
-    "alpinejs": "^3.14.7"
+    "alpinejs": "^3.14.7",
+    "uuid": "^11.0.3"
   }
 }
